@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.dh.Wesped {
    namespace Controller {
      class com.dh.Wesped.Controller.AuthController {
          ~ authenticationManager : AuthenticationManager
          ~ passwordEncoder : PasswordEncoder
          + login()
          + register()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Controller {
      class com.dh.Wesped.Controller.BookingController {
          + BookingController()
          + createNewBooking()
          + getAllBookingsByProductId()
          + listAllBookings()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Controller {
      class com.dh.Wesped.Controller.CategoryController {
          + CategoryController()
          + categoryRegister()
          + delete()
          + editCategory()
          + findById()
          + listAll()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Controller {
      class com.dh.Wesped.Controller.CityController {
          + CityController()
          + cityRegister()
          + findById()
          + listAll()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Controller {
      class com.dh.Wesped.Controller.FeatureController {
          + FeatureController()
          + featureRegister()
          + findById()
          + listAll()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Controller {
      class com.dh.Wesped.Controller.ImageController {
          + ImageController()
          + findById()
          + imageRegister()
          + listAll()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Controller {
      class com.dh.Wesped.Controller.PolicyController {
          + PolicyController()
          + findById()
          + listAll()
          + policyRegister()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Controller {
      class com.dh.Wesped.Controller.ProductController {
          + ProductController()
          + findById()
          + getAllProductsByCategoryId()
          + getAllProductsByCityId()
          + getAllProductsByDates()
          + getAllProductsByDatesAndCity()
          + listAll()
          + productRegister()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Controller {
      class com.dh.Wesped.Controller.UserController {
          + UserController()
          + createNewUser()
          + listAllUsers()
      }
    }
  }
  

  com.dh.Wesped.Controller.AuthController o-- com.dh.Wesped.Security.Jwt.JwtProvider : jwtProvider
  com.dh.Wesped.Controller.AuthController o-- com.dh.Wesped.Service.UserService : userService
  com.dh.Wesped.Controller.BookingController o-- com.dh.Wesped.Service.BookingService : bookingService
  com.dh.Wesped.Controller.CategoryController o-- com.dh.Wesped.Service.CategoryService : categoryService
  com.dh.Wesped.Controller.CityController o-- com.dh.Wesped.Service.CityService : cityService
  com.dh.Wesped.Controller.FeatureController o-- com.dh.Wesped.Service.FeatureService : featureService
  com.dh.Wesped.Controller.ImageController o-- com.dh.Wesped.Service.ImageService : imageService
  com.dh.Wesped.Controller.PolicyController o-- com.dh.Wesped.Service.PolicyService : policyService
  com.dh.Wesped.Controller.ProductController o-- com.dh.Wesped.Service.ProductService : productService
  com.dh.Wesped.Controller.UserController o-- com.dh.Wesped.Service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
